<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <EditText
        android:id="@+id/first_number"
        android:textSize="@dimen/app_text_size"
        android:textColorHint="@android:color/darker_gray"
        android:hint="@string/hint1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/second_number"
        android:textSize="@dimen/app_text_size"
        android:textColorHint="@android:color/darker_gray"
        android:hint="@string/hint2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/op_add"
            android:gravity="center"
            android:text="@string/op_add"
            android:textSize="@dimen/app_text_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/op_sub"
            android:gravity="center"
            android:text="@string/op_sub"
            android:textSize="@dimen/app_text_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/op_mul"
            android:gravity="center"
            android:text="@string/op_mul"
            android:textSize="@dimen/app_text_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/op_div"
            android:gravity="center"
            android:text="@string/op_div"
            android:textSize="@dimen/app_text_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>

    <TextView
        android:id="@+id/result"
        android:freezesText="true"
        android:textSize="@dimen/app_text_size"
        android:textColorHint="@android:color/darker_gray"
        android:hint="@string/hint_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
